--- a/application/FaerisLuaExport/proj.android/res/values/strings.xml
+++ b/application/FaerisLuaExport/proj.android/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
 
-    <string name="app_name">FaerisTest</string>
+    <string name="app_name">fgame</string>
+    <string name="fgame">fgame</string>
 
 </resources>
