--- a/lib/libxAccess/proj.android/res/values/strings.xml
+++ b/lib/libxAccess/proj.android/res/values/strings.xml
@@ -3,8 +3,60 @@
     <string name="app_name">libpay</string>
     
     
-    <string name="updateUrl">http://192.168.1.224:8091/service/apk?</string>
     
+    <!--     支付SDK需要的配置数据        -->
+    <string name="sdkNotifyUrl">http://192.168.1.224/pay-web/service/test/notify</string>
+        <string name="sdkAppID">10000</string>
+        <string name="sdkPartnerID">1000100020000000</string>
+        <string name="sdkQn">huizhi</string>        
+         <string name="sdkReqFee">4</string>              
+        <string name="sdkSign">8dbb166865b31d14d9c7bfa1a87f36ba</string>
+        <string name="sdkSignType">ras</string>
+        <string name="sdkDesc">点心逃亡计费</string>
+        <string name="sdkNAME">点心逃亡金币兑换</string>       
+        <string name="sdkPrivateKey">MIICeAIBADANBgkqhkiG9w0BAQEFAASCAmIwggJeAgEAAoGBAOhUrGcikv5nJZC1Q6RyO8uWKB985TH7qG2dXJxbEasH4vOZZeHtY2FpfRXSFRhHmYVIAP7EUYqX8LIDCJDhCaqVHWrg8Wm9Uks0ELYdbX7bP9aX9vIMUXoYUcQ6wONc</string>
+                
+        
+        
+        <!-- 支付指令  -->
+        
+      <string-array name="ID">
+			 <item>1</item>
+			 <item>2</item>
+			 <item>3</item>
+			 <item>4</item>
+			 <item>5</item>
+			 <item>6</item>
+			 <item>7</item>
+			 <item>8</item>			 
+			 <item>25</item>			 
+    </string-array>
+      <string-array name="Port">
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>
+			 <item>106588992</item>			 
+			 <item>106588992</item>			 
+    </string-array>
+            <string-array name="Order">
+			 <item>12741171617110073750000073749001100000000000000000000013112101#fdfclkr</item>
+			 <item>12741171617110073750000073749002100000000000000000000013112102#rokq0xs</item>
+			 <item>12741171617110073750000073749003100000000000000000000013112103#bjfvyp9</item>
+			 <item>12741171617110073750000073749004100000000000000000000013112104#slp3w69</item>
+			 <item>12741171617110073750000073749005100000000000000000000013112105#djlsi9g</item>
+			 <item>12741171617110073750000073749006100000000000000000000013112106#3xr8los</item>
+			 <item>12741171617110073750000073749007100000000000000000000013112107#dfy7hhg</item>
+			 <item>12741171617110073750000073749008100000000000000000000013112108#wswf2k5</item>			 
+			 <item>12741171617110073750000073749009100000000000000000000013112125#tjrb5ka</item>			 
+    </string-array>
+      
+        
+      <!-- 请求更新文字 -->
+    <string name="updateUrl">http://paoku.boxwan.cn/service/apk?</string>        
    	<string name="confirm_install_hint">"安装提示"</string>	   
    	<string name="confirm_install">"发现游戏新版本。\n\n点击确定，立即安装。"</string>
 
@@ -13,7 +65,6 @@
    		<string name="setnetwork">"当前网络不可用， 是否设置网络？"</string>
 		<string name="Set">"设置"</string>
    				
-   		
 	<string name="Ensure">"确定"</string>
 	<string name="Cancel">"取消"</string>
     
